--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "kintone-like-click",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "manifest_version": 2,
   "description": "click all like buttons on current page in kintone",
   "content_scripts": [{
@@ -8,7 +8,7 @@
       "https://*.cybozu.com/k/*"
     ],
     "js": [
-      "js/index.js"
+      "public/js/bundle.js"
     ]
   }]
 }
