--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@cybozu/eslint-config": "^10.0.2",
     "eslint": "^6.8.0",
     "prettier": "^2.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "sweetalert2": "^9.10.9"
   }
 }
